--- a/react-project/src/App.css
+++ b/react-project/src/App.css
@@ -11,11 +11,21 @@
   will-change: filter;
   transition: filter 300ms;
 }
-.logo:hover {
+
+.logo.react:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+.logo.angular:hover {
+  filter: drop-shadow(0 0 2em #f84a4aaa);
+}
+
+.logo.qwik:hover {
+  filter: drop-shadow(0 0 2em #d91bffaa);
+}
+
+.logo.vite:hover {
+  filter: drop-shadow(0 0 2em #ffd723aa);
 }
 
 @keyframes logo-spin {
@@ -28,15 +38,7 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
+  .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
